<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fillViewport="false">
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="@dimen/dp_15"
        android:layout_marginRight="@dimen/dp_15"
        android:layout_marginBottom="@dimen/dp_15"
        android:orientation="vertical"
        tools:context=".MainActivity">

        <TextView
            android:id="@+id/yourName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="@dimen/dp_17"
            android:layout_marginTop="@dimen/dp_20">
        </TextView>
        <TextView
            android:id="@+id/counttime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="@dimen/dp_17"
            android:layout_marginTop="@dimen/dp_20">
        </TextView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/quiz_1"
            android:textSize="@dimen/dp_17"
            android:textColor="@color/black"
            android:layout_marginTop="@dimen/dp_10" />
        <RadioGroup
            android:id="@+id/radioGroup1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">
            <RadioButton
                android:id="@+id/rg1_rb1"
                android:layout_width="@dimen/dp_220"
                android:layout_height="wrap_content"
                android:text="@string/quiz_1_selection1" >
            </RadioButton>
            <RadioButton
                android:id="@+id/rg1_rb2"
                android:layout_width="@dimen/dp_220"
                android:layout_height="wrap_content"
                android:text="@string/quiz_1_selection2" >
            </RadioButton>
            <RadioButton
                android:id="@+id/rg1_rb3"
                android:layout_width="@dimen/dp_220"
                android:layout_height="wrap_content"
                android:text="@string/quiz_1_selection3">
            </RadioButton>
        </RadioGroup>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/quiz_2"
            android:textSize="@dimen/dp_17"
            android:textColor="@color/black"
            android:layout_marginTop="@dimen/dp_10" />
        <EditText
            android:id="@+id/editText_quiz2"
            android:layout_width="@dimen/dp_220"
            android:layout_height="wrap_content">
        </EditText>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/quiz_3"
            android:textSize="@dimen/dp_17"
            android:textColor="@color/black"
            android:layout_marginTop="@dimen/dp_10" />
        <CheckBox
            android:id="@+id/Cb_quiz3_1"
            android:layout_width="@dimen/dp_220"
            android:layout_height="wrap_content"
            android:text="@string/quiz_3_selection1">
        </CheckBox>
        <CheckBox
            android:id="@+id/Cb_quiz3_2"
            android:layout_width="@dimen/dp_220"
            android:layout_height="wrap_content"
            android:text="@string/quiz_3_selection2">
        </CheckBox>
        <CheckBox
            android:id="@+id/Cb_quiz3_3"
            android:layout_width="@dimen/dp_220"
            android:layout_height="wrap_content"
            android:text="@string/quiz_3_selection3">
        </CheckBox>
        <CheckBox
            android:id="@+id/Cb_quiz3_4"
            android:layout_width="@dimen/dp_220"
            android:layout_height="wrap_content"
            android:text="@string/quiz_3_selection4">
        </CheckBox>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/quiz_4"
            android:textSize="@dimen/dp_17"
            android:textColor="@color/black"
            android:layout_marginTop="@dimen/dp_10" />
        <EditText
            android:id="@+id/editText_quiz4"
            android:layout_width="@dimen/dp_220"
            android:layout_height="wrap_content" >
        </EditText>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/quiz_5"
            android:textSize="@dimen/dp_17"
            android:textColor="@color/black"
            android:layout_marginTop="@dimen/dp_10" />
        <RadioGroup
            android:id="@+id/radioGroup5"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">
            <RadioButton
                android:id="@+id/rg5_rb1"
                android:layout_width="@dimen/dp_220"
                android:layout_height="wrap_content"
                android:text="@string/quiz_5_selection1" >
            </RadioButton>
            <RadioButton
                android:id="@+id/rg5_rb2"
                android:layout_width="@dimen/dp_220"
                android:layout_height="wrap_content"
                android:text="@string/quiz_5_selection2" >
            </RadioButton>
            <RadioButton
                android:id="@+id/rg5_rb3"
                android:layout_width="@dimen/dp_220"
                android:layout_height="wrap_content"
                android:text="@string/quiz_5_selection3">
            </RadioButton>
        </RadioGroup>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/quiz_6"
            android:textSize="@dimen/dp_17"
            android:textColor="@color/black"
            android:layout_marginTop="@dimen/dp_10" />
        <EditText
            android:id="@+id/editText_quiz6"
            android:layout_width="@dimen/dp_220"
            android:layout_height="wrap_content" >
        </EditText>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/quiz_7"
            android:textSize="@dimen/dp_17"
            android:textColor="@color/black"
            android:layout_marginTop="@dimen/dp_10" />
        <CheckBox
            android:id="@+id/Cb_quiz7_1"
            android:layout_width="@dimen/dp_220"
            android:layout_height="wrap_content"
            android:text="@string/quiz_7_selection1">
        </CheckBox>
        <CheckBox
            android:id="@+id/Cb_quiz7_2"
            android:layout_width="@dimen/dp_220"
            android:layout_height="wrap_content"
            android:text="@string/quiz_7_selection2">
        </CheckBox>
        <CheckBox
            android:id="@+id/Cb_quiz7_3"
            android:layout_width="@dimen/dp_220"
            android:layout_height="wrap_content"
            android:text="@string/quiz_7_selection3">
        </CheckBox>
        <CheckBox
            android:id="@+id/Cb_quiz7_4"
            android:layout_width="@dimen/dp_220"
            android:layout_height="wrap_content"
            android:text="@string/quiz_7_selection4">
        </CheckBox>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/quiz_8"
            android:textSize="@dimen/dp_17"
            android:textColor="@color/black"
            android:layout_marginTop="@dimen/dp_10" />
        <EditText
            android:id="@+id/editText_quiz8"
            android:layout_width="@dimen/dp_220"
            android:layout_height="wrap_content" >
        </EditText>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/quiz_9"
            android:textSize="@dimen/dp_17"
            android:textColor="@color/black"
            android:layout_marginTop="@dimen/dp_10" />
        <RadioGroup
            android:id="@+id/radioGroup9"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">
            <RadioButton
                android:id="@+id/rg9_rb1"
                android:layout_width="@dimen/dp_220"
                android:layout_height="wrap_content"
                android:text="@string/quiz_9_selection1" >
            </RadioButton>
            <RadioButton
                android:id="@+id/rg9_rb2"
                android:layout_width="@dimen/dp_220"
                android:layout_height="wrap_content"
                android:text="@string/quiz_9_selection2" >
            </RadioButton>
        </RadioGroup>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/quiz_10"
            android:textSize="@dimen/dp_17"
            android:textColor="@color/black"
            android:layout_marginTop="@dimen/dp_10"/>
        <EditText
            android:id="@+id/editText_quiz10"
            android:layout_width="@dimen/dp_220"
            android:layout_height="wrap_content" >
        </EditText>

        <Button
            android:id="@+id/buttonSubmit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dp_30"
            android:text="@string/submit"
            android:textColor="@color/black"
            android:background="@color/purple_500">

        </Button>
    </LinearLayout>
</ScrollView>