<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="@dimen/dp_15"
    android:layout_marginRight="@dimen/dp_15"
    android:layout_marginBottom="@dimen/dp_15"
    android:orientation="vertical"
    android:background="@drawable/background_main"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_100"
        android:text="@string/main_quiz"
        android:textSize="@dimen/dp_20"
        android:textColor="@color/black"
        android:textStyle="bold">
    </TextView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="@dimen/dp_100"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textSize="@dimen/dp_15"
            android:textColor="@color/black">
        </TextView>
        <EditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        </EditText>
    </LinearLayout>

    <TextView
        android:layout_width="@dimen/dp_100"
        android:layout_height="wrap_content"
        android:text="@string/ready"
        android:textSize="@dimen/dp_15"
        android:textColor="@color/black">
    </TextView>
    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/dp_10"
        android:text="@string/start_quiz"
        android:textSize="@dimen/dp_30"
        android:textColor="@color/black">
    </Button>
</LinearLayout>